[package]
name = "bevy_replicon_renet2"
version = "0.17.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2021"
description = "Integration with renet2 for bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UkoeHB/renet2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[dependencies]
bevy_replicon = { version = "0.40", default-features = false }
bevy_renet2 = { path = "../bevy_renet2", version = "0.15.0", default-features = false }
bevy = { version = "0.18", default-features = false, features = ["bevy_log"] }

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
bevy_renet2 = { path = "../bevy_renet2", version = "0.15.0", features = [
  "native_transport",
] }
bevy = { version = "0.18", default-features = false, features = [
  "bevy_gizmos",
  "bevy_state",
  "bevy_text",
  "bevy_gizmos_render",
  "bevy_ui_render",
  "bevy_window",
  "default_font",
  "serialize",
  "ui_picking",
  "x11",
] }
serde = "1.0"
log = "0.4"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "std",
  "tracing-log",
] }

[features]
default = ["renet_serde", "netcode", "client", "server"]

# Re-exports of bevy_replicon features
client = ["bevy_replicon/client"]
server = ["bevy_replicon/server"]

# Re-exports of renet features
renet_serde = ["bevy_renet2/serde"]
netcode = ["bevy_renet2/netcode"]
steam = ["bevy_renet2/steam"]
native_transport = ["netcode", "bevy_renet2/native_transport"]
memory_transport = ["netcode", "bevy_renet2/memory_transport"]
wt_server_transport = ["netcode", "bevy_renet2/wt_server_transport"]
wt_client_transport = ["netcode", "bevy_renet2/wt_client_transport"]
ws_server_transport = ["netcode", "bevy_renet2/ws_server_transport"]
ws_client_transport = ["netcode", "bevy_renet2/ws_client_transport"]
ws-rustls = ["bevy_renet2/ws-rustls"]
ws-native-tls = ["bevy_renet2/ws-native-tls"]

[[test]]
name = "netcode"
required-features = ["native_transport", "client", "server"]
