[package]
name = "demo_bevy"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
netcode = ["bevy_renet2/netcode", "bevy_renet2/native_transport"]
steam = ["bevy_renet2/steam"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_window",
  "ktx2",
  "serialize",
  "tonemapping_luts",
  "x11",
  "zstd_rust",
] }
bevy_renet2 = { path = "../bevy_renet2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_egui = "0.39"
renet2_visualizer = { path = "../renet2_visualizer", features = ["bevy"] }
fastrand = "2.0"
steamworks = { version = "0.13", optional = true }
