[package]
name = "renet2"
version = "0.14.0"
authors = ["koe <ukoe@protonmail.com>"]
description = "Server/Client network protocol library for multiplayer games, forked from renet"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/UkoeHB/renet2"

[package.metadata.docs.rs]
features = ["default", "bevy"]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[features]
# Default features
default = []

# Enable bevy integration
bevy = ["dep:bevy_ecs"]

[dependencies]
bevy_ecs = { version = "0.18", optional = true }
bytes = "1.1"
log = "0.4"
octets = "0.3"

[dev-dependencies]
env_logger = "0.11"
