[package]
name = "renet2_steam"
version = "0.15.0"
keywords = ["gamedev", "networking", "transport"]
description = "steam transport for the renet2 crate"
repository = "https://github.com/UkoeHB/renet2"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[features]
# Enable bevy integration
bevy = ["dep:bevy_ecs"]

[dependencies]
renet2 = { path = "../renet2", version = "0.15.0" }
steamworks = "0.13"
log = "0.4.19"
bevy_ecs = { version = "0.19", optional = true }

[dev-dependencies]
env_logger = "0.11"
