[package]
name = "renet2_visualizer"
version = "0.14.0"
keywords = ["gamedev", "networking"]
description = "Egui metrics visualizer for the renet2 crate"
repository = "https://github.com/UkoeHB/renet2"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
renet2 = { path = "../renet2", version = "0.14.0" }
egui = "0.33"
bevy_ecs = { version = "0.18", optional = true }
