[package]
name = "renetcode2"
version = "0.14.0"
description = "Server/Client network protocol library for multiplayer games"
keywords = ["gamedev", "networking", "cryptography"]
repository = "https://github.com/UkoeHB/renet2"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]

[dependencies]
chacha20poly1305 = "0.10.0"
log = "0.4.17"
